--- a/notebook5_landowska.ipynb
+++ b/notebook5_landowska.ipynb
@@ -54,7 +54,7 @@
           "height": 331
         },
         "id": "R65ec-xVAAQO",
-        "outputId": "421b095a-db17-4ae9-fb4b-deed9bbf1366"
+        "outputId": "7fe75402-fe48-4c71-fc9b-c5c79b5b1f8f"
       },
       "source": [
         "from google.colab import drive\n",
@@ -115,7 +115,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ec8bb398-4608-4657-8339-4062f36ed717\">\n",
+              "  <div id=\"df-bf1cccad-f589-4257-b1bc-667eb199c848\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -283,7 +283,7 @@
               "</table>\n",
               "<p>5 rows × 33 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ec8bb398-4608-4657-8339-4062f36ed717')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bf1cccad-f589-4257-b1bc-667eb199c848')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -334,12 +334,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ec8bb398-4608-4657-8339-4062f36ed717 button.colab-df-convert');\n",
+              "          document.querySelector('#df-bf1cccad-f589-4257-b1bc-667eb199c848 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ec8bb398-4608-4657-8339-4062f36ed717');\n",
+              "          const element = document.querySelector('#df-bf1cccad-f589-4257-b1bc-667eb199c848');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -386,7 +386,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 447
         },
-        "outputId": "0ed26989-8899-4686-cfc4-a44d66735c9f"
+        "outputId": "fe4accb3-9a49-4b0a-8754-c65762043a5c"
       },
       "source": [
         "\n",
@@ -453,7 +453,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "woj8I3NsAgCT",
-        "outputId": "2941025f-bf74-467e-aa7e-1ccbad0360e5",
+        "outputId": "330591c4-7002-4d4c-ee34-b14a6e859fbc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -480,7 +480,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "2lCCdv-1At4G",
-        "outputId": "e8765bc2-bb23-4aeb-f037-42c22091dd94",
+        "outputId": "a5acc2cc-ae7a-4ece-fb36-404eb8b79c80",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -518,7 +518,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "xyyjn8U3BA0n",
-        "outputId": "8023fc34-20af-4af6-e2dc-dcc35d085407",
+        "outputId": "7e081255-5973-4b32-d96e-614a058aa1a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -545,7 +545,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "rwLHd7XKBDbe",
-        "outputId": "ec42fbdb-4839-4d8a-d7b3-27c271bbd54c",
+        "outputId": "9ef9564b-fc2b-4af0-fdbd-60309dcf422f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -583,7 +583,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "JcphcrAGBWFQ",
-        "outputId": "30eaf1c2-2c14-4001-da35-e9afd4ca46e7",
+        "outputId": "7b4ddccd-b48f-4df6-a897-05364c7eafc3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -601,7 +601,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "accuracy: 0.9824561403508771\n"
+            "accuracy: 0.9912280701754386\n"
           ]
         }
       ]
@@ -610,7 +610,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "b0QkV9YaBYBK",
-        "outputId": "278dfce7-f784-4736-c0c8-c178fc7c99a1",
+        "outputId": "685632d3-5f77-4de2-b0c6-6248aca67b68",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -628,7 +628,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "accuracy: 0.9824561403508771\n"
+            "accuracy: 0.9912280701754386\n"
           ]
         }
       ]
@@ -646,7 +646,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "gZ30YXm8Bnnq",
-        "outputId": "08411ae9-2c49-4f88-fc04-19a89a66ba2e",
+        "outputId": "364495fc-ba00-465e-b963-b894af82b710",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -689,11 +689,11 @@
         "## Conclusions:\n",
         "a. Which model performed the best? Why do you think this model performed the best? \\\\\n",
         "\n",
-        "Support Vector Model performed the best because this model is effective in hihg dimensiona spaces like this one. \n",
+        "Support Vector Model performed the best because this model is effective in high dimensional spaces like this one. \n",
         "\n",
         "b. What effect did the principal component analysis have on the accuracy of your best model? Why do you think this is the case?\n",
         "\n",
-        "The principal component analysis simplifies the complexity in high-dimensional data while retaining trends and patterns. It does this by transforming the data into fewer dimensions, which act as summaries of features. That is why it reduced the accuracy of SVC because that model works better in high dimensiona spaces"
+        "The principal component analysis simplifies the complexity in high-dimensional data while retaining trends and patterns. It does this by transforming the data into fewer dimensions, which act as summaries of features. That is why it reduced the accuracy of SVC because that model works better in high dimensional spaces."
       ]
     }
   ]
