--- a/Day01_Python_Review_and_Intro_to_Pandas.ipynb
+++ b/Day01_Python_Review_and_Intro_to_Pandas.ipynb
@@ -126,7 +126,10 @@
         "__Which model do you think is *better* and why?__\n",
         "<div>\n",
         "<img src=\"https://github.com/merriekay/S23-CS167-Notes/blob/main/images/bias_variance_tradeoff.png?raw=1\"/>\n",
-        "</div>"
+        "</div>\n",
+        "\n",
+        "\n",
+        "model on the right is overfitted and, while it will produce better results for this particular dataset, if we try to use it on a different dataset, it will prefrorm worse than the model on te left "
       ]
     },
     {
