--- a/Day03_Pandas_Practice.ipynb
+++ b/Day03_Pandas_Practice.ipynb
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "XmtjLrX06iif",
         "outputId": "afe401f3-aef8-41eb-f65d-1de89489b278",
@@ -174,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "0FH87qeb6iig",
         "outputId": "28b232d3-103f-40bb-fbe4-b102398ef103",
@@ -467,7 +467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "agFMIcb46iih",
         "outputId": "d7d49ff2-6881-4939-d4c0-ea5abd00cf68",
@@ -676,7 +676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "Q2_kEnSK6iii",
         "outputId": "d45356a0-c35f-464c-b716-5ecc3bca90f7",
@@ -714,7 +714,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "e7e43XC46iii",
         "outputId": "1c7d6b8f-fa28-4500-e72c-77e61b76d0d6",
@@ -995,7 +995,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "gWTpfVAZ6iij",
         "outputId": "926d14ea-7ace-40a1-848e-58de038e58f2",
@@ -1182,7 +1182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "T01-Dz4E6iij",
         "outputId": "e52734c7-e026-4402-ecb3-e6c52e8a8f91",
@@ -1211,7 +1211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "ZXQ2ktIU6iij",
         "outputId": "8d3753cd-7b56-419a-e194-03b30347ff59",
@@ -1250,7 +1250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "O4sVvATP6iik",
         "outputId": "de6b69b8-85c6-4264-876d-661ec48487ea",
@@ -1278,7 +1278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "rFbiwfua6iik",
         "outputId": "ab4ef4a1-c67c-416e-acb2-958b5074a87c",
@@ -1305,7 +1305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "kymD-Yx_6iik",
         "outputId": "077f6748-a1ae-49a8-898b-cfc1de318839",
@@ -1345,7 +1345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "69iwydna6iik",
         "outputId": "158d76df-0515-43e3-c315-905b2d460b49",
@@ -1374,7 +1374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "28kqWsJZ6iik",
         "outputId": "b4e5d975-2ffa-4007-da1c-4c405ef4e8fc",
@@ -1404,7 +1404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "ZgwRpvk46iil",
         "outputId": "3741adf5-a32f-4f4c-9f5e-9f342ae22cd1",
@@ -1443,7 +1443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "scrolled": false,
         "id": "1FHd-lm86iil",
@@ -1680,7 +1680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "EWJs7dt46iil",
         "outputId": "027406ad-f143-47e3-bc94-4baba6a792a9",
@@ -1706,7 +1706,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "WhZReKM16iil",
         "outputId": "48352a42-6da0-429e-ae99-319faa0bbf36",
@@ -1958,7 +1958,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "hAiQMIsN6iil",
         "outputId": "175cab8e-0583-4714-9eae-f2b7288a16d1",
@@ -1982,7 +1982,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "rY8XmKsl6iil",
         "outputId": "0c03c167-c36f-4c72-8118-ed300407000b",
@@ -2012,7 +2012,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "RrRQxMzp6iim",
         "outputId": "a0e266f8-2654-44d9-def6-8096d4f1e5a8",
@@ -2050,7 +2050,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "9nZxY_fN6iim",
         "outputId": "fddcec90-dba3-4be6-ec7d-1a4503bac75f",
@@ -2077,7 +2077,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "EhRBqwIp6iim",
         "outputId": "391cbff1-b7f8-4548-95fc-cd3d210f28cd",
@@ -2104,7 +2104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "GcfMKq2_6iim",
         "outputId": "101d8e1e-65e6-4f93-8da1-fdcaf089c067",
@@ -2134,7 +2134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "8i5SZ8DD6iim",
         "outputId": "eef5c746-6fbe-49f7-e609-01e000d7937e",
@@ -2178,7 +2178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "rvi8W33M6iim"
       },
@@ -2200,7 +2200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "2BxklKfe6iim",
         "outputId": "fe733620-6f90-47d9-8ef0-b88fc4924595",
@@ -2579,7 +2579,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "FX00upsz6iim",
         "outputId": "d194a1ae-3547-4a1e-8b2e-1969c41e18ff",
@@ -2606,7 +2606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "hE65Pu5f6iin",
         "outputId": "a560628e-bd1a-4d6e-c424-772a34417383",
@@ -2633,7 +2633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "GTLa42n36iin",
         "outputId": "ee6d2d34-eb96-4f81-df31-e9d3e898e108",
@@ -2665,7 +2665,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "Zvlz0iRv6iin"
       },
@@ -2692,7 +2692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "8TdhkMsq6iin",
         "outputId": "d21ac0b4-a889-4093-f1f9-47da536d5116",
@@ -2733,7 +2733,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "MTmR4Lfx6iin",
         "outputId": "6fc2521f-d068-4684-db89-8fbb2a033eba",
@@ -3104,7 +3104,7 @@
         "# for each row that does not have an age recorded, replace the NaN value with the calculated average\n",
         "# hint: don't use a loop; it can be done in 1 line of code using fillna()\n",
         "\n",
-        "queenstown_subset.fillna(titanic.age.mean())"
+        "queenstown_subset.fillna(titanic.age.mean())  #bruh i think this is wrong lol "
       ]
     },
     {
@@ -3123,7 +3123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "k7DCnfK16iin",
         "outputId": "676b323f-2b3e-460c-8f56-d576360c73b3",
@@ -3326,7 +3326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "f2hjwavx6iin",
         "outputId": "d3e78994-dfff-4b2f-d397-da7f707c60e5",
@@ -3367,7 +3367,7 @@
           "height": 282
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3395,7 +3395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "9FdB58Xt6iin",
         "outputId": "64d64f4f-bbc8-459c-d903-b2ef3ee2772d",
@@ -3428,7 +3428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "YIQyHk_w6iio",
         "outputId": "4236509d-7b3e-4784-d047-d8b616ed54c9",
@@ -3456,7 +3456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "id": "_kg9vHsc6iio",
         "outputId": "f6a53cb3-ad14-49ea-87ef-4f2cc50c8fae",
@@ -3484,7 +3484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "Ln4xHQuz6iio",
         "outputId": "46836770-fedc-411d-ca5d-90ff65fb80a5",
@@ -3515,7 +3515,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "xrDr4q5s6iio",
         "outputId": "eb0ce310-9aa3-44e6-e372-4d2617e743f5",
@@ -3551,7 +3551,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "MdJInHS06iio"
       },
